E-Learning Point.html

--- a/E-Learning Point.html
+++ b/E-Learning Point.html
@@ -210,7 +210,7 @@
                 <button type="submit">Send Message</button>
             </form>
             <br>
-            <a href="https://sai-teja-rachamalla.github.io/Sai-Teja/">Developer's Contact</a>
+            <a href="https://sai-teja-rachamalla.github.io/Sai-Teja-Portfolio/">Developer's Contact</a>
             <p>Please contact us if you have any questions or need assistance.</p>
         </div>
     </section>
